motion blur (2d filter) not working #45632

Closed
opened 2015-07-31 20:37:33 +02:00 by Dalai Felinto · 8 comments

System Information
OSX 10.9.5, AMD Radeon HD 6750M

Blender Version
Broken: 2.73a (in particular 8d084e8c )
Worked: 2.72

Short description of error
Motion Blur no longer works in the Blender Game Engine

Exact steps for others to reproduce the error
motionblur_bge.blend

(open file, press space)

**System Information** OSX 10.9.5, AMD Radeon HD 6750M **Blender Version** Broken: 2.73a (in particular 8d084e8c ) Worked: 2.72 **Short description of error** Motion Blur no longer works in the Blender Game Engine **Exact steps for others to reproduce the error** [motionblur_bge.blend](https://archive.blender.org/developer/F216498/motionblur_bge.blend) (open file, press space)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Added subscriber: @panzergame

Added subscriber: @panzergame

I can't reproduce the bug: linux fedora blender 2.75.3.

I can't reproduce the bug: linux fedora blender 2.75.3.

This issue was referenced by 527ee3f1f1

This issue was referenced by 527ee3f1f1ff81d0240c263579ef42be714cac71
Author
Owner

Added subscriber: @JasonWilkins

Added subscriber: @JasonWilkins
Author
Owner

Last time we had this issue in OSX the fix was 07cd75d7 - @JasonWilkins it seems this slip through in your ghost context refactor commit.

Last time we had this issue in OSX the fix was 07cd75d7 - @JasonWilkins it seems this slip through in your ghost context refactor commit.
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45632
No description provided.