Fix T45632: motion blur (2d filter) not working - in OSX at least

This regression was introduced in Blende 2.73a when we went through a
ghost context refactoring :(