intern/ghost/intern/GHOST_ContextCGL.mm
@@ -205,6 +205,9 @@ static void makeAttribList(
 	attribs.push_back(NSOpenGLPFADepthSize);
 	attribs.push_back((NSOpenGLPixelFormatAttribute) 32);
 
+	attribs.push_back(NSOpenGLPFAAccumSize);
+	attribs.push_back((NSOpenGLPixelFormatAttribute) 32);
+
 	if (stereoVisual)
 		attribs.push_back(NSOpenGLPFAStereo);
 
